# FFPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  FFPlayer.cpp  FFPlayer.h  JavaCallHelper.cpp  JavaCallHelper.h  Log.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/example/ffplayer/: FFPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
